Fix modal being too long. Click overlay from bottom doesn't work

--- a/client/src/styles/components/_modal.scss
+++ b/client/src/styles/components/_modal.scss
@@ -8,7 +8,7 @@
 }
 
 .modal-dialog {
-    height: 100%;
+    max-height: 100%;
     overflow-y: auto;
 
     &:focus {
